# modu_llm5

./: .gitignore  PRJ01_W2_005_Embedding_Model.ipynb  PRJ01_W2_006_Vectorstore.ipynb  PRJ01_W2_007_Retriever.ipynb  PRJ01_W3_001_Prompt_Engineering_Basic.ipynb  README.md  pyproject.toml
001_chatbot/: PRJ01_W1_002_OpenAI_Chat_Completion.ipynb  PRJ01_W1_003_Langchain_Components.ipynb  PRJ01_W1_004_LangSmith_LCEL.ipynb  PRJ01_W1_005_Gradio_Chatbot.ipynb  PRJ01_W2_001_Tokenizing_Embedding.ipynb  PRJ01_W2_002_Simple_RAG_Pipeline.ipynb  PRJ01_W2_003_Document_Loader.ipynb  PRJ01_W2_004_Text_Splitter.ipynb  PRJ01_W2_005_Embedding_Model.ipynb  PRJ01_W2_006_Vectorstore.ipynb  PRJ01_W3_001_Prompt_Engineering_Basic.ipynb  PRJ01_W3_002_Prompt_Engineering_Fewshot.ipynb  PRJ01_W3_003_Prompt_Engineering_CoT.ipynb  PRJ01_W3_004_Langfuse_Prompt_Management.ipynb  PRJ01_W3_005_Chat_History.ipynb  PRJ01_W3_006_Housing_FAQ_Chatbot.ipynb  chat_history_legacy.db
001_chatbot/data/: derivatives_rules_details.txt  housing_faq_formatted.json  housing_faq_formatted_with_summary.json  파생상품시장 업무규정 시행세칙_전문.hwp  회원시스템 접속 등에 관한 지침_전문.hwp
001_chatbot/docs/: DEPENDENCIES.md
001_chatbot/drafts/test/: clear_notebook_outputs.py  (+2 more)
001_chatbot/homework/: HousingFaqChatbot_20260228_강은영.ipynb  NaiveRag_20260221_강은영.ipynb
002_etfbot/: PRJ02_W1_001_RAG_Evaluation_Intro.ipynb  PRJ02_W1_002_Retrieval_Metrics.ipynb  PRJ02_W1_006_Contextual_Retrieval.ipynb
002_etfbot/data/: evaluation_dataset_en_key.csv  evaluation_dataset_key.csv  evaluation_result_en_key.csv  evaluation_result_key.csv  ragas_testset_en_key.csv  ragas_testset_key.csv
002_etfbot/homework/: ContextualRetrieval_20260307_강은영.ipynb  contexts_cache.json  kts_chat_history.db
docs/: HousingFaqChatbot_20260228_강은영_system.html  RAG_Experiments.ipynb  RAG_W3_vs_W4_architecture.html  llm_cache_cleanup.md
docs/drafts/: KTS_access_infra_improve_guide.txt  (+2 more)
homework/: HousingFaqChatbot_20260228_강은영.ipynb  NaiveRag_20260221_강은영.ipynb  TravelPlanner_20260207_강은영.ipynb
(+30 files in other folders)
